cros: Increase touch target size of pin buttons on lock.

Bug: 803700
Change-Id: Ie88645a2ec0244b6f5870fdb3187087e918e8855