ash/login/ui/login_button.h
@@ -24,8 +24,8 @@ class ASH_EXPORT LoginButton : public views::ImageButton {
   std::unique_ptr<views::InkDropHighlight> CreateInkDropHighlight()
       const override;
 
- private:
-  int GetInkDropRadius() const;
+ protected:
+  virtual int GetInkDropRadius() const;
 
   DISALLOW_COPY_AND_ASSIGN(LoginButton);
 };
