ash/login/ui/login_pin_view.cc
@@ -48,6 +48,9 @@ const int kInitialBackspaceDelayMs = 500;
 // After the first auto-submit, how long until the next backspace event fires?
 const int kRepeatingBackspaceDelayMs = 150;
 
+// Size of the md-ripple when a PIN button is tapped.
+const int kRippleSizeDp = 54;
+
 base::string16 GetButtonLabelForNumber(int value) {
   DCHECK(value >= 0 && value < int{arraysize(kPinLabels)});
   return base::ASCIIToUTF16(std::to_string(value));
@@ -86,6 +89,9 @@ class BasePinButton : public LoginButton, public views::ButtonListener {
   }
 
   ~BasePinButton() override = default;
+
+  // LoginButton:
+  int GetInkDropRadius() const override { return kRippleSizeDp / 2; }
 
   // views::ButtonListener:
   void ButtonPressed(Button* sender, const ui::Event& event) override {
@@ -142,9 +148,7 @@ class DigitPinButton : public BasePinButton {
 }  // namespace
 
 // static
-const int LoginPinView::kButtonSeparatorSizeDp = 30;
-// static
-const int LoginPinView::kButtonSizeDp = 48;
+const int LoginPinView::kButtonSizeDp = 78;
 
 // A PIN button that displays backspace icon.
 class LoginPinView::BackspacePinButton : public BasePinButton {
@@ -255,14 +259,14 @@ LoginPinView::LoginPinView(const OnPinKey& on_key,
   // Builds and returns a new view which contains a row of the PIN keyboard.
   auto build_and_add_row = [this]() {
     auto* row = new NonAccessibleView();
-    row->SetLayoutManager(std::make_unique<views::BoxLayout>(
-        views::BoxLayout::kHorizontal, gfx::Insets(), kButtonSeparatorSizeDp));
+    row->SetLayoutManager(
+        std::make_unique<views::BoxLayout>(views::BoxLayout::kHorizontal));
     AddChildView(row);
     return row;
   };
 
-  SetLayoutManager(std::make_unique<views::BoxLayout>(
-      views::BoxLayout::kVertical, gfx::Insets(), kButtonSeparatorSizeDp));
+  SetLayoutManager(
+      std::make_unique<views::BoxLayout>(views::BoxLayout::kVertical));
 
   // 1-2-3
   auto* row = build_and_add_row();
